Resolves: tdf#113962 save detected filter outside file dialog

different file dialog impls work differently so store the
detected filter outside the file dialog

Change-Id: I144d8df06e5265fed8f11b284a2f40c17c3e09ef